...
    "‹ notas": {
      "localizations": {}
    },
    "padrões": {
      "localizations": {}
    },
    "Padrões": {
      "localizations": {}
    },
    "PADRÕES": {
      "localizations": {}
    },
    "PERGUNTA DOS PADRÕES": {
      "localizations": {}
    },
    "RECORDAR": {
...
