appId: app.traco
---
- launchApp:
    clearState: true
- extendedWaitUntil:
    visible: "Permitir"
    timeout: 3000
    optional: true
- tapOn:
    text: "Permitir"
    optional: true
- tapOn:
    id: pagina
- inputText: "a arquitetura do app precisa de uma tabela de rotas"
- swipe:
    direction: DOWN
- extendedWaitUntil:
    visible:
      id: "cartao-analise"
    timeout: 8000
- extendedWaitUntil:
    visible:
      id: "campo-problema"
    timeout: 5000
- swipe:
    direction: DOWN
- tapOn:
    id: "concluir"
- extendedWaitUntil:
    visible: "Permitir"
    timeout: 3000
    optional: true
- tapOn:
    text: "Permitir"
    optional: true
- tapOn:
    id: pagina
- inputText: "eu sou um vencedor"
- extendedWaitUntil:
    visible:
      id: "cartao-analise"
    timeout: 8000
- tapOn:
    id: "concluir"
- extendedWaitUntil:
    visible: "Permitir"
    timeout: 3000
    optional: true
- tapOn:
    text: "Permitir"
    optional: true
- waitForAnimationToEnd: {timeout: 2500}
- tapOn:
    id: "notas-da-pagina"
- extendedWaitUntil:
    visible:
      id: aba-padroes
    timeout: 6000
- tapOn:
    id: aba-padroes
- extendedWaitUntil:
    visible: "Padrões"
    timeout: 6000
- tapOn:
    id: aba-perfil
- extendedWaitUntil:
    visible: "Perfil"
    timeout: 6000
- tapOn:
    id: aba-notas
- swipe:
    start: 99%, 50%
    end: 15%, 50%
- extendedWaitUntil:
    visible: "Concluir"
    timeout: 6000
